@@ -193,8 +193,8 @@ Show a "Shutdown" button in the top left corner of X2Go Client. When pressed, X2
 $HOME/.halt. An external script has to watch for this file and trigger a thinclient shutdown once it appears.
 .TP
 \*(T<\fB\-\-closebt\fR\*(T>
-Show a "Close" button in the top left corner of X2Go Client when logged in broker/thinclient mode. 
-When pressed, X2Go Client will be closed and automaticaly restarted if in thinclient mode.
+Show a "Close" button in the top left corner of X2Go Client when logged in broker/thinclient mode.
+When pressed, X2Go Client will be closed and automatically restarted if in thinclient mode.
 
 .SH PORTABLE OPTIONS
 X2Go Client can be installed on a USB-Flashdrive as a portable applications. If installed that way, the following
