@@ -56,6 +56,8 @@ x2goclient (4.1.1.1-0x2go1) UNRELEASED; urgency=medium
       x2goresume-session on session resume.
     - src/sessionbutton.cpp: make button non-sensitive in bottom right part if
       it's editable. Fixes: #1214.
+    - {src/{help.cpp,onmainwindow.{cpp,h}},man/man1/x2goclient.1}: reformat,
+      whitespace fixes, split out close button slot in a separate function.
 
   [ Oleksandr Shneyder ]
   * New upstream version (4.1.1.1):
